--- a/src/styles/sass/_pokemon_list.scss
+++ b/src/styles/sass/_pokemon_list.scss
@@ -195,7 +195,7 @@
 
     &>div {
       width: calc(50% - 20px);
-      margin:10px;
+      margin: 10px;
       text-align: center;
     }
   }
@@ -206,7 +206,7 @@
     width:100%;
 
     &>div {
-      width: calc(100%/3 - 20px);
+      width: calc((100% / 3) - 20px);
     }
   }
 }
@@ -214,7 +214,7 @@
 @include mq-desktop {
   .pokemon-flex {
     &>div {
-      width: calc(100%/ 5 - 10px);
+      width: calc((100% / 5) - 10px);
       margin: 5px;
     }
   }
